--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{#> layout}}
+<form id="search-form" name="search" action="/search?q=" method="get">
+    <input type="text" name="searchText" class="form-control"  placeholder="Search" style="width:300px; text-align:right;">
+    <button class="btn btn-default" type="submit">
+        <i class="glyphicon glyphicon-search"></i>
+    </button>
+</form>
+{{/layout}}
