--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{#> layout}}
-<form id="search-form" name="search" action="/search?q=" method="get">
-    <input type="text" name="searchText" class="form-control"  placeholder="Search" style="width:300px; text-align:right;">
+<form id="search-form" name="search" action="/movies" method="get">
+    <input type="text" name="name" class="form-control"  placeholder="Search" style="width:300px; text-align:right;">
     <button class="btn btn-default" type="submit">
         <i class="glyphicon glyphicon-search"></i>
     </button>
