--- a/views/movies_list.hbs
+++ b/views/movies_list.hbs
@@ -9,7 +9,7 @@
         </tr>
         {{#each results}}
             <tr>
-                <td><a href="/movies/{{this.title}}">{{this.title}}</a></td>
+                <td><a href="/movies/{{this.id}}">{{this.title}}</a></td>
                 <td>{{this.id}}</td>
                 <td>{{this.releaseDate}}</td>
                 <td>{{this.voteAverage}}</td>
