all endpoints working

--- a/views/movie_details.hbs
+++ b/views/movie_details.hbs
@@ -5,6 +5,7 @@
     <p><b>Tagline:</b> {{movie.tagline}}</p>
     <p><b>Release Date:</b> {{movie.releaseDate}}</p>
     <p><b>Vote Average:</b> {{movie.voteAverage}}</p>
+    <p><a href="/movies/{{movie.id}}/credits">Credits</a></p>
     <p><b>Overview:</b> {{movie.overview}}</p>
 </div>
 {{/layout}}
