--- a/views/actor.hbs
+++ b/views/actor.hbs
@@ -1,17 +1,17 @@
 {{#> layout}}
 <div class="container-float">
+    <h2>Nome do Actor</h2>
     <table>
         <tr>
             <th>Title</th>
             <th>Release Date</th>
             <th>Vote Avg</th>
         </tr>
-        {{#each results}}
+        {{#each cast}}
             <tr>
                 <td><a href="/movies/{{this.id}}">{{this.title}}</a></td>
                 <td>{{this.releaseDate}}</td>
                 <td>{{this.voteAverage}}</td>
-                <!--<td><a href="{{this.album.url}}">Link</a></td>!-->
             </tr>
         {{/each}}
     </table>
