--- a/views/movies_list.hbs
+++ b/views/movies_list.hbs
@@ -1,5 +1,17 @@
 {{#> layout}}
 <div class="container-float">
+    {{#if pagination.first}}
+        <a href="/movies?name={{name}}&page={{pagination.first}}">First</a>
+    {{/if}}
+    {{#if pagination.prev}}
+        <a href="/movies?name={{name}}&page={{pagination.prev}}">Prev</a>
+    {{/if}}
+    {{#if pagination.next}}
+        <a href="/movies?name={{name}}&page={{pagination.next}}">Next</a>
+    {{/if}}
+    {{#if pagination.last}}
+        <a href="/movies?name={{name}}&page={{pagination.last}}">Last</a>
+    {{/if}}
     <table>
         <tr>
             <th>Title</th>
