--- a/views/partials/layout.hbs
+++ b/views/partials/layout.hbs
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8"/>
     <title>{{title}}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <!--<link rel='stylesheet' href='/stylesheets/style.css' />!-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script src="/scripts/myscripts.js"></script>!-->
 </head>
 <body>
-{{> @partial-block}}
+    {{> navbar}}
+    <div class="col-xs-9">
+        {{> @partial-block}}
+    </div>
 </body>
 </html>
