- added sign up - user can add and remove favourite movies

--- a/views/movie_details.hbs
+++ b/views/movie_details.hbs
@@ -1,11 +1,32 @@
 {{#> layout}}
-<div class="container-float">
-    <h2 style="display: inline-block; padding-bottom: 20px">{{movie.originalTitle}}</h2>
-    <p style="display: inline-block; padding-left: 10px"><i>id: {{movie.id}}</i></p>
-    <p><b>Tagline:</b> {{movie.tagline}}</p>
-    <p><b>Release Date:</b> {{movie.releaseDate}}</p>
-    <p><b>Vote Average:</b> {{movie.voteAverage}}</p>
-    <p><a href="/movies/{{movie.id}}/credits">Credits</a></p>
-    <p><b>Overview:</b> {{movie.overview}}</p>
+<div class="container-fluid">
+    <div class="col-xs-6">
+        <h2 style="display: inline-block; padding-bottom: 20px">{{movie.originalTitle}}</h2>
+        <p style="display: inline-block; padding-left: 10px"><i>id: {{movie.id}}</i></p>
+        {{#if user}}
+            <button id="favourite" style="display: inline-block; padding-left: 10px"
+                    onclick="addFavourite(this, {{movie.toString}})">Favourite</button>
+        {{/if}}
+        <p><b>Tagline:</b> {{movie.tagline}}</p>
+        <p><b>Release Date:</b> {{movie.releaseDate}}</p>
+        <p><b>Vote Average:</b> {{movie.voteAverage}}</p>
+        <p><a href="/movies/{{movie.id}}/credits">Credits</a></p>
+        <p><b>Overview:</b> {{movie.overview}}</p>
+    </div>
+    <div class="container-fluid row col-xs-6" style="float:right; width:40%; ">
+        <ul>
+            <div id="commentsdiv"></div>
+            <li class="row">
+                <form action="" method="post">
+                    <textarea class="form-control" placeholder="Write Comment" name="commentBox" style="resize: none"
+                              required></textarea>
+                </form>
+                {{#if user}}
+                    <button id="comment" class="btn btn-default" onclick="postComment(this, {{movie.id}})">Post comment</button>
+                {{/if}}
+            </li>
+        </ul>
+    </div>
 </div>
+
 {{/layout}}
