--- a/views/partials/layout.hbs
+++ b/views/partials/layout.hbs
@@ -11,7 +11,7 @@
 </head>
 <body>
     {{> navbar}}
-    <div class="col-xs-9">
+    <div style="padding-left: 10px">
         {{> @partial-block}}
     </div>
 </body>
