--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,7 +3,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">Sign up</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body ">
         <form role="form" method="POST" action="/signup">
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
@@ -12,13 +12,6 @@
                     </div>
                 </div>
             </div>
-
-            <!--
-            <div class="form-group">
-                <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username">
-            </div>
-            !-->
-
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
@@ -26,18 +19,14 @@
                                placeholder="Password">
                     </div>
                 </div>
-                <!--
+            </div>
+            <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
-                        <input type="password" name="password_confirmation" id="password_confirmation"
-                            class="form-control input-sm" placeholder="Confirm Password">
+                        <input type="submit" value="Register" class="btn btn-info btn-block">
                     </div>
                 </div>
-                !-->
             </div>
-
-            <input type="submit" value="Register" class="btn btn-info btn-block">
-
         </form>
     </div>
 </div>
